// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept Flow props 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  margin-top: 1rem;
  margin-right: 0.5rem;
  margin-bottom: 1rem;
  margin-left: 0.5rem;
  display: inline-block;
}

.emotion-0:first-of-type {
  margin-left: 0;
}

.emotion-0:last-of-type {
  margin-right: 0;
}

.emotion-0:empty {
  display: none;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      class="emotion-0"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        2
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  margin-top: 0rem;
  margin-right: 0.5rem;
  margin-bottom: 0rem;
  margin-left: 0.5rem;
  display: inline-block;
}

.emotion-0:first-of-type {
  margin-left: 0;
}

.emotion-0:last-of-type {
  margin-right: 0;
}

.emotion-0:empty {
  display: none;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      class="emotion-0"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        2
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        3
      </span>
    </div>
  </div>
</div>
`;
